# modern-cpp-exercises

exercise0_overview/: CMakeLists.txt  exercise.cpp  slides.cpp
exercise1_class_attributes/: CMakeLists.txt  exercise.h  test.cpp
exercise1_lambdas/: test.cpp
googletest/: .gitrepo
template/: CMakeLists.txt
